feat: add ban command with duration and reason handling; implement TimeEntry utility for time parsing